Update age and driving licence

--- a/cv.tex
+++ b/cv.tex
@@ -12,10 +12,10 @@
 %\address{2 rue qui n'existe pas}{63000 Clermont-Ferrand}
 \email{antoine.morrier@gmail.com}
 \homepage{cpp-rendering.io}
-\mobile{06 63 97 04 67}
+\mobile{+33 6 63 97 04 67}
 \social[github]{qnope}
 \social[twitter]{cpp-rendering}
-\extrainfo{27 ans -- Permis B}
+\extrainfo{27 years old -- Driving licence}
 
 % bibliography adjustements (only useful if you make citations in your resume, or print a list of publications using BibTeX)
 %   to show numerical labels in the bibliography (default is to show no labels)
