--- a/cv.tex
+++ b/cv.tex
@@ -35,34 +35,79 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
+\vspace{-3em}
+
 \section{Experience}
-\cventry{2019--Now}{C++ Software Engineer}{Diagdev}{Castries}{}{Working with modern C++ (C++17) and Qt5 framework on Hematology-related devices.
+\cventry{2019--Now}{C++ Software Engineer}{Diagdev}{Castries}{}{
 \begin{itemize}%
   \itemsep0em 
-  \item Implement a variant-based message communication with the underlying micro-controlers
-  \item Implementation of different tools to have easier (with less boilerplate) interactions between the C++ part and the QML part
-  \item Participating in the development of the classification algorithm of blood cells
-  \item Made some workshops to present new modern C++ features and to show how they can be applied to our codebase to make it easier and more efficient
+  \item Worked with modern C++ (C++17) and Qt5 framework on Hematology-related devices.
+  \item Built a variant-based message communication with the underlying micro-controlers.
+  \item Implemented tools to reduce boilerplate in 
+        interactions between C++ code and QML.
+  \item Participated in the development of the blood cell classification algorithm.
+  \item Organized workshops to present new modern C++ features and show how they 
+  can be applied to make the codebase easier and more efficient.
 \end{itemize}
+\vspace{-0.5em}
 Used technologies: C++, Python, QML, Qt, QtQuick
 }
-\cventry{2017--2018}{C++ Software Engineer}{Ausy / Airbus}{Sophia Antipolis}{}{Work on a software that eases to find and visualize tie points and ground control points on pictures taken by drones, aircrafts or satellites that are used to recreate 3D models of the overflew areas or to make a map of a region. I have developed and integrated into this software multithreaded module, user interfaces, and projection services between different geodetic systems. I also developped a new 3D features: track visualization and visualization of nongeolocalized model 3D.
-\newline
+
+
+\vspace{0.5em}
+\cventry{2017--2018}{C++ Software Engineer}{Ausy / Airbus}{Sophia Antipolis}{}{
+\begin{itemize}  
+  \itemsep0em 
+  \item Worked on a software for
+        search and visualization of tie points and ground control points on drone, 
+        aerial and satellite imagery for 3D modelling and mapping.
+  \item Developed and integrated multithreaded 
+        modules, user interfaces, and  services for projection between different geodetic systems.
+  \item Developped new track visualization and non-geolocalized 3D model visualization features.
+\end{itemize}
+\vspace{-0.5em}
 Used technologies: C++, Qt
 }
-\cventry{2017}{C++ OpenGL Intern}{Dassault Systèmes}{Vélizy-Villacoublay}{}{To improve the real-time rendering of CAD models, we need to simulate the phenomenon of shading by the model itself of the light resulting from the HDR Image of the environment. To do this, I have integrated the Distance Field Ambient Occlusion and Voxel Based Ambient Occlusion algorithms into the real-time visualization component of Dassault Systèmes.
-\newline
+
+\vspace{0.5em}
+\cventry{2017}{C++ OpenGL Intern}{Dassault Systèmes}{Vélizy-Villacoublay}{}{
+  \begin{itemize}  
+    \itemsep0em 
+    \item Improved the real-time rendering of CAD models by simulating the phenomenon of 
+    shading by the model itself of the light resulting from the HDR Image of the environment.
+    \item Integrated the Distance Field Ambient Occlusion and Voxel Based Ambient Occlusion 
+    algorithms into the real-time visualization component of Dassault Systèmes.
+  \end{itemize}
+  \vspace{-0.5em}
 Used technologies : C++, OpenGL, GLSL}
-\cventry{2017}{Temporary}{Télécom SudParis}{Evry}{}{Made and presented a complete modern OpenGL course for engineering student in Télécom SudParis and ENSIIE.}
+\vspace{0.5em}
+\cventry{2017}{Temporary}{Télécom SudParis}{Evry}{}{
+  \begin{itemize}  
+    \itemsep0em   
+\item Made and presented a complete modern OpenGL course for 
+engineering students in Télécom SudParis and ENSIIE.
+\end{itemize}
+}
 
 \section{Education}
-\cventry{2014--2018}{Engineer}{Télécom SudParis}{Evry, France}{}{High-Tech Imaging: learn about image processing}  % arguments 3 to 6 can be left empty
-\cventry{2012--2014}{Preparatory class TSI}{Lycée Jean Baptiste Dumas}{Alès}{}{Two years intensive program preparing for the national competive exam for entry to engineering schools. Revelant coursework: Maths, Physic}
+\cventry{2014--2018}{Engineering student}{Télécom SudParis}{Evry, France}{}{
+  \begin{itemize}  
+    \itemsep0em   
+\item High-Tech Imaging: learned about image processing.
+\end{itemize}
+} 
+\cventry{2012--2014}{Classe Préparatoire TSI}{Lycée Jean Baptiste Dumas}{Alès}{}{
+  \begin{itemize}  
+    \itemsep0em   
+\item Two year intensive program preparing for the national competive exam for entry into engineering schools. 
+Revelant coursework: Maths, Physics.
+\end{itemize}
+}
 
 \section{Skills}
 \cvdoubleitem{\textbf{Language}}{C++ 20, QML, Rust}{\textbf{Framework}}{Qt and QtQuick}
 \cvdoubleitem{\textbf{Rendering}}{OpenGL 4+ / Vulkan}{\textbf{GPGPU}}{GLSL(Compute Shaders)}
 
 \section{Interests}
-\cvdoubleitem{Cars}{Drive on track}{Sports}{Taekwondo and Badminton}
+\cvdoubleitem{Cars}{Track driving}{Sports}{Taekwondo and Badminton}
 \end{document}
