Update with freelance

--- a/cv.tex
+++ b/cv.tex
@@ -15,7 +15,7 @@
 \mobile{+33 6 63 97 04 67}
 \social[github]{qnope}
 \social[twitter]{cpp-rendering}
-\extrainfo{27 years old -- Driving licence}
+\extrainfo{30 years old -- Driving licence}
 
 % bibliography adjustements (only useful if you make citations in your resume, or print a list of publications using BibTeX)
 %   to show numerical labels in the bibliography (default is to show no labels)
@@ -38,54 +38,54 @@
 \vspace{-3em}
 
 \section{Experience}
-\cventry{2019--Now}{C++ Software Engineer}{Diagdev}{Castries}{}{
+
+\cventry{2023--Present}{Freelance Software Developer}{}{Montpellier}{}{
+Modern C++, Qt/QML, Workshops, Training, consulting, and software architecture.
+\newline
+Write C++ and rendering articles on my blog: \href{https://cpp-rendering.io}{cpp-rendering.io}.
 \begin{itemize}%
-  \itemsep0em 
-  \item Worked with modern C++ (C++17) and Qt5 framework on Hematology-related devices.
-  \item Built a variant-based message communication with the underlying micro-controlers.
-  \item Implemented tools to reduce boilerplate in 
-        interactions between C++ code and QML.
-  \item Participated in the development of the blood cell classification algorithm.
-  \item Organized workshops to present new modern C++ features and show how they 
-  can be applied to make the codebase easier and more efficient.
+  \itemsep0em
+  \item \textbf{SLB (Schlumberger, 2023--Present)}:%
+    \begin{itemize}[itemsep=0em, topsep=0em, leftmargin=1em]
+      \item Designed a compile-time guaranteed thread-safe framework.
+      \item Refactored core components of Techlog Software.
+      \item Improved overall performance.
+      \item Delivered workshops and training sessions to present new modern C++ features and show how they can be applied to make the codebase easier and more efficient.
+    \end{itemize}
+  \item \textbf{Diagdev: (2025--2 months)}:%
+  \begin{itemize}[itemsep=0em, topsep=0em, leftmargin=1em]
+    \item Bug fixing
+    \item Analyzed and improved compilation time.
+  \end{itemize}
 \end{itemize}
-\vspace{-0.5em}
-Used technologies: C++, Python, QML, Qt, QtQuick
 }
 
+\cventry{2019--2023}{C++ Software Engineer}{Diagdev}{Castries}{}{
+\begin{itemize}%
+  \itemsep0em 
+  \item Worked with modern C++ (C++17) and Qt5 Framework on Hematology-related devices.
+  \item Built a variant-based message communication with the underlying micro-controllers.
+  \item Implemented tools to reduce boilerplate in interactions between C++ code and QML.
+  \item Participated in the development of the blood cell classification algorithm.
+\end{itemize}
+Used technologies: C++, Python, QML, Qt, QtQuick
+}
 
 \vspace{0.5em}
 \cventry{2017--2018}{C++ Software Engineer}{Ausy / Airbus}{Sophia Antipolis}{}{
 \begin{itemize}  
   \itemsep0em 
-  \item Worked on a software for
-        search and visualization of tie points and ground control points on drone, 
-        aerial and satellite imagery for 3D modelling and mapping.
-  \item Developed and integrated multithreaded 
-        modules, user interfaces, and  services for projection between different geodetic systems.
-  \item Developped new track visualization and non-geolocalized 3D model visualization features.
+  \item Worked on software for search and visualization of tie points and ground control points on drone, aerial, and satellite imagery for 3D modeling and mapping.
+  \item Developed and integrated multithreaded modules, user interfaces, and services for projection between different geodetic systems.
+  \item Developed new track visualization and non-geolocalized 3D model visualization features.
 \end{itemize}
-\vspace{-0.5em}
 Used technologies: C++, Qt
 }
 
-\vspace{0.5em}
-\cventry{2017}{C++ OpenGL Intern}{Dassault Systèmes}{Vélizy-Villacoublay}{}{
-  \begin{itemize}  
-    \itemsep0em 
-    \item Improved the real-time rendering of CAD models by simulating the phenomenon of 
-    shading by the model itself of the light resulting from the HDR Image of the environment.
-    \item Integrated the Distance Field Ambient Occlusion and Voxel Based Ambient Occlusion 
-    algorithms into the real-time visualization component of Dassault Systèmes.
-  \end{itemize}
-  \vspace{-0.5em}
-Used technologies : C++, OpenGL, GLSL}
-\vspace{0.5em}
 \cventry{2017}{Temporary}{Télécom SudParis}{Evry}{}{
   \begin{itemize}  
     \itemsep0em   
-\item Made and presented a complete modern OpenGL course for 
-engineering students in Télécom SudParis and ENSIIE.
+    \item Made and presented a complete modern OpenGL course for engineering students in Télécom SudParis and ENSIIE.
 \end{itemize}
 }
 
@@ -93,21 +93,15 @@ engineering students in Télécom SudParis and ENSIIE.
 \cventry{2014--2018}{Engineering student}{Télécom SudParis}{Evry, France}{}{
   \begin{itemize}  
     \itemsep0em   
-\item High-Tech Imaging: learned about image processing.
-\end{itemize}
-} 
-\cventry{2012--2014}{Classe Préparatoire TSI}{Lycée Jean Baptiste Dumas}{Alès}{}{
-  \begin{itemize}  
-    \itemsep0em   
-\item Two year intensive program preparing for the national competive exam for entry into engineering schools. 
-Revelant coursework: Maths, Physics.
-\end{itemize}
+    \item High-Tech Imaging: learned about image processing.
+  \end{itemize}
 }
 
 \section{Skills}
-\cvdoubleitem{\textbf{Language}}{C++ 20, QML, Rust}{\textbf{Framework}}{Qt and QtQuick}
+\cvdoubleitem{\textbf{Language}}{C++ 26, QML, Rust}{\textbf{Framework}}{Qt and QtQuick}
 \cvdoubleitem{\textbf{Rendering}}{OpenGL 4+ / Vulkan}{\textbf{GPGPU}}{GLSL(Compute Shaders)}
+\cvitem{\textbf{Miscellaneous}}{CMake, Git}
 
 \section{Interests}
-\cvdoubleitem{Cars}{Track driving}{Sports}{Taekwondo and Badminton}
+\cvdoubleitem{\textbf{Cars}}{Track driving}{\textbf{Science}}{Maths, Physics}
 \end{document}
