--- a/cv.tex
+++ b/cv.tex
@@ -42,39 +42,58 @@
 \cventry{2023--Present}{Freelance Software Developer}{}{Montpellier}{}{
 Modern C++, Qt/QML, Workshops, Training, consulting, and software architecture.
 \newline
-Write C++ and rendering articles on my blog: \href{https://cpp-rendering.io}{cpp-rendering.io}.
+Administrator of C++ Meetup Montpellier
+\newline
+Writing C++ and rendering articles on my blog: \href{https://cpp-rendering.io}{cpp-rendering.io}.
 \begin{itemize}%
   \itemsep0em
-  \item \textbf{SLB (Schlumberger, 2023--Present)}:%
+  \item \textbf{SLB (Schlumberger, 2023--Present)}: Techlog Team%
+  \newline
+  Techlog is a market-leading digital solution for the wellbore industry.
+  It is used by geologists and petrophysicists. Working within a team of 30 people, I achieved
+  the following tasks.
     \begin{itemize}[itemsep=0em, topsep=0em, leftmargin=1em]
       \item Designed a compile-time guaranteed thread-safe framework.
       \item Refactored core components of Techlog Software.
       \item Improved overall performance.
       \item Delivered workshops and training sessions to present new modern C++ features and show how they can be applied to make the codebase easier and more efficient.
     \end{itemize}
-  \item \textbf{Diagdev: (2025--2 months)}:%
+  \item \textbf{Diagdev (2025--2 months)}: Developer team%
+  \newline
+  For a one-time need, Diagdev called upon my services to help with various aspects, such as bug fixing and improving compilation times. Compilation times were the main focus of my assignment, as resource consumption during compilation rendered the computer unusable. Results:
   \begin{itemize}[itemsep=0em, topsep=0em, leftmargin=1em]
-    \item Bug fixing
-    \item Analyzed and improved compilation time.
+    \item 22 minutes to 9 minutes for a full build.
+    \item Faster incremental builds (as fewer files need to be recompiled).
+    \item Estimated gain: 0.8 day per week per developer.
+    \item Some bugs fixed.
   \end{itemize}
 \end{itemize}
+Used technologies: C++, Qt, OpenGL, Vulkan, QML, QtQuick
 }
 
 \cventry{2019--2023}{C++ Software Engineer}{Diagdev}{Castries}{}{
-\begin{itemize}%
-  \itemsep0em 
+Diagdev is an engineering firm that designs machines related to hematology. The company is made up of around forty people from various backgrounds: electronics engineers, developers, mechanical engineers... The development team consists of 5 people. The projects I was assigned to were
+\begin{itemize}[label=\labelitemii]%
+  \itemsep0em
+  \item A slide stainer: used to stain slides to help biologists perform manual cell counting.
+  \item A blood analyzer: from a tube of blood, it extracts the blood formula (red blood cells, white blood cells).
+\end{itemize}
+My tasks were:
+\begin{itemize}[label=\labelitemii]%
+  \itemsep0em
   \item Worked with modern C++ (C++17) and Qt5 Framework on Hematology-related devices.
   \item Built a variant-based message communication with the underlying micro-controllers.
   \item Implemented tools to reduce boilerplate in interactions between C++ code and QML.
   \item Participated in the development of the blood cell classification algorithm.
+  \item Presented modern C++ features to the team.
 \end{itemize}
 Used technologies: C++, Python, QML, Qt, QtQuick
 }
 
 \vspace{0.5em}
 \cventry{2017--2018}{C++ Software Engineer}{Ausy / Airbus}{Sophia Antipolis}{}{
-\begin{itemize}  
-  \itemsep0em 
+\begin{itemize}[label=\labelitemii]
+  \itemsep0em
   \item Worked on software for search and visualization of tie points and ground control points on drone, aerial, and satellite imagery for 3D modeling and mapping.
   \item Developed and integrated multithreaded modules, user interfaces, and services for projection between different geodetic systems.
   \item Developed new track visualization and non-geolocalized 3D model visualization features.
@@ -83,16 +102,16 @@ Used technologies: C++, Qt
 }
 
 \cventry{2017}{Temporary}{Télécom SudParis}{Evry}{}{
-  \begin{itemize}  
-    \itemsep0em   
+  \begin{itemize}[label=\labelitemii]
+    \itemsep0em
     \item Made and presented a complete modern OpenGL course for engineering students in Télécom SudParis and ENSIIE.
 \end{itemize}
 }
 
 \section{Education}
 \cventry{2014--2018}{Engineering student}{Télécom SudParis}{Evry, France}{}{
-  \begin{itemize}  
-    \itemsep0em   
+  \begin{itemize}[label=\labelitemii]
+    \itemsep0em
     \item High-Tech Imaging: learned about image processing.
   \end{itemize}
 }
